--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^5.5.0",
     "fastify": "^1.11.2",
     "jest": "^23.5.0",
+    "nanoid": "^1.2.3",
     "node-fetch": "^2.2.0",
     "npm-run-all": "^4.1.3",
     "regenerator-runtime": "^0.12.1"
